kubernetes/Ingress/service-loadbalacing/customer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-customer
  namespace: my-app
  labels:
    category: customer
spec:
  containers:
    - name: container
      image: kubetm/customer
---
apiVersion: v1
kind: Service
metadata:
  name: svc-customer
  namespace: my-app
spec:
  selector:
    category: customer
  ports:
    - port: 8080
