kubernetes/Ingress/service-loadbalacing/order.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-order
  namespace: my-app
  labels:
    category: order
spec:
  containers:
    - name: container
      image: kubetm/order
---
apiVersion: v1
kind: Service
metadata:
  name: svc-order
  namespace: my-app
spec:
  selector:
    category: order
  ports:
    - port: 8080
