kubernetes/Ingress/service-loadbalacing/shopping.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-shopping
  namespace: my-app
  labels:
    category: shopping
spec:
  containers:
    - name: container
      image: kubetm/shopping
---
apiVersion: v1
kind: Service
metadata:
  name: svc-shopping
  namespace: my-app
spec:
  selector:
    category: shopping
  ports:
    - port: 8080
